exo 5:  post-it jQuery OK

--- a/Exercices 31-10-2019  jQuery/5/index.html
+++ b/Exercices 31-10-2019  jQuery/5/index.html
@@ -13,6 +13,7 @@
     <button type="button" id="affiche">Affiche</button>
     <div id="postIt"></div>
     <p id="survole1">C'est gentil de me survoler...</p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js">
     </script>
 </body>
