--- a/Exercices 31-10-2019  jQuery/5/index.html
+++ b/Exercices 31-10-2019  jQuery/5/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body><!--test-->
     <h1>Post-It</h1>
     <button type="button" id="cache" >Cache</button> 
     <button type="button" id="affiche">Affiche</button>
