--- a/Exercices-11-06-2019-Flip/flip.html
+++ b/Exercices-11-06-2019-Flip/flip.html
@@ -22,6 +22,9 @@
             </div>
         </div>
     </div>
-</body>
+    <div id="code">
 
+    </div>
+</body>
+<script src="http://gist-it.appspot.com/github/mb47000/AFPA-Exercices/blob/master/Exercices%2011-06-2019%20Flip/flip.html"></script>
 </html>
