--- a/Exercices-11-06-2019-Flip/flip.html
+++ b/Exercices-11-06-2019-Flip/flip.html
@@ -23,8 +23,9 @@
         </div>
     </div>
     <div id="code">
-
+        <script src="http://gist-it.appspot.com/github/mb47000/AFPA-Exercices/blob/index-exo/Exercices-11-06-2019-Flip/flip.html"></script>
+        <script src="http://gist-it.appspot.com/github/mb47000/AFPA-Exercices/blob/index-exo/Exercices-11-06-2019-Flip/style.css"></script>
     </div>
 </body>
-<script src="http://gist-it.appspot.com/github/mb47000/AFPA-Exercices/blob/master/Exercices%2011-06-2019%20Flip/flip.html"></script>
+
 </html>
